1998-12-18  Tim Jenness  <timj@jach.hawaii.edu>

	* sculib_put_fits_d.f (SCULIB_PUT_FITS_D): Add fix to convert 'D'
	to 'E' exponent.

1998-12-10  Tim Jenness  <timj@jach.hawaii.edu>

	* scunoise: Support new directory structure at the JAC (RPT)

	* scuplot.csh: Make V0.13 KAPPA compliant

	* surf_write_map_info.F (SURF_WRITE_MAP_INFO): Add WCS information 
	to NDF

	* surf_rebin.f (SURF_REBIN): Rename USEGRD to GUARD

1998-12-09  Tim Jenness  <timj@jach.hawaii.edu>

	* remdbm.pl: Add axis propogation

	* sdip.csh: Make sure that STYLE is reset to original value

	* surf_write_map_info.F (SURF_WRITE_MAP_INFO): Fix the IRAS90
	writer for J2000 (epoch was being stored as B2000!!)

1998-12-08  Tim Jenness  <timj@jach.hawaii.edu>

	* sdip.csh: Make V0.13 KAPPA compliant

	* qdraw: Make V0.13 KAPPA compliant

	* surf_rebin.f (SURF_REBIN): Add USEGRD with default of TRUE

	* extract_data.ifl: Correct prompt for LONG_OUT

	* intrebin.ifl: Correct prompt for LONG_OUT

	* bolrebin.ifl: Correct prompt for LONG_OUT

	* rebin.ifl: Correct prompt for LONG_OUT

1998-12-06  Tim Jenness  <timj@jach.hawaii.edu>

	* rebin.ifl: Add USEGRD

	* intrebin.ifl: Add USEGRD

	* bolrebin.ifl: Add USEGRD.

	* surf_reduce_noise.f (SURF_REDUCE_NOISE): Check for JIGL_DSCD in
	the FITS header since old data does not contain this keyword.
	(SURF_REDUCE_NOISE): Make sure output filename is zero-padded.

1998-12-03  Tim Jenness  <timj@jach.hawaii.edu>

	* sculib_fit_skydip.f (SCULIB_FIT_SKYDIP): Check that the number
	of degrees of freedom is positive.

	* sculib_skydip_var.f (SCULIB_SKYDIP_VAR): Check for STATUS on
	entering routine. Tidy up header.

1998-11-24  Tim Jenness  <timj@jach.hawaii.edu>

	* surf_mon.f (SURF_MON): Add REDUCE_NOISE

1998-11-20  Tim Jenness  <timj@jach.hawaii.edu>

	* scunoise: Add Remo's fixes to allow it to work with the new Domain 
	name at JCMT and to support the SURF REDUCE_NOISE output format.

1998-11-18  Tim Jenness  <timj@jach.hawaii.edu>
