@@ -23,7 +23,7 @@ FSOURCES= surflib_diff_despike.f surflib_calc_output_grid.f \
 	surflib_decode_remsky_string.f surflib_stats_grid.f \
 	surflib_remove_dc_from_exp.f surflib_2dft_chop.f \
 	surflib_rem_grid.f surflib_rem_timeseries.f \
-	surflib_median_regrid.f
+	surflib_median_regrid.f surflib_calc_dual_beam.f
 
 CSOURCES = 
 
@@ -88,3 +88,4 @@ surflib_rem_grid.o: PRM_PAR SAE_PAR
 surflib_rem_timeseries.o: PRM_PAR SAE_PAR
 surflib_remove_dc_from_exp.o: MSG_PAR PRM_PAR SAE_PAR
 surflib_stats_grid.o: PRM_PAR SAE_PAR
+surflib_calc_dual_beam.o: SAE_PAR PRM_PAR
